--- a/src/app/app-modal/app-modal.component.html
+++ b/src/app/app-modal/app-modal.component.html
@@ -14,10 +14,16 @@
                         <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                                 <h5 class="mb-1">{{detail.getTitle()}}</h5>
-                                <small>3 days ago</small>
+                                <small>
+                                    <ng-template #t let-fill="fill">
+                                        <span class="star" [class.full]="fill === 100">
+                                          <span class="half" [style.width.%]="fill">&hearts;</span>&hearts;
+                                        </span>
+                                    </ng-template>
+                                    <ngb-rating [(rate)]="detail.rating" [starTemplate]="t" [readonly]="true" [max]="5"></ngb-rating>  
+                                </small>
                             </div>
                             <p class="mb-1">{{detail.getDescription()}}</p>
-                            <small>Donec id elit non mi porta.</small>
                         </a>
                     </div>
                 </ng-template>
