--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,14 @@
-<header class="header fixed-header">
+<header class="header">
     <app-jumbotron title={{title}}></app-jumbotron>
 </header>
-<main role="main">
 
-    <div>
-        <app-collection></app-collection>
-    </div>
-
+<main role="main" class="container">
+    <app-collection></app-collection>
 </main>
 
-<footer class="footer fixed-bottom">
-    <hr>
-    <p>&copy; Company 2020</p>
+<footer class="footer">
+    <div class="container">
+        <hr>
+        <p>&copy; Company 2020</p>
+    </div>
 </footer>
