--- a/src/app/jumbotron/jumbotron.component.html
+++ b/src/app/jumbotron/jumbotron.component.html
@@ -1,5 +1,3 @@
-<div class="jumbotron">
-    <div class="container">
-      <h1 class="display-3">{{title}}</h1>
-    </div>
+<div class="jumbotron container">
+      <h1 class="display-4">{{title}}</h1>
 </div>
