--- a/src/app/jumbotron/jumbotron.component.html
+++ b/src/app/jumbotron/jumbotron.component.html
@@ -1,3 +1,5 @@
-<div class="jumbotron container">
-      <h1 class="display-4">{{title}}</h1>
+<div class="sticky-top">
+      <div class="jumbotron text-center">
+            <h1 class="display-4">{{title}}</h1>
+      </div>
 </div>
