--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,14 @@
     <app-jumbotron title={{title}}></app-jumbotron>
 </header>
 
-<main role="main" class="container anyClass">
+<!--anyClass-->
+<main role="main" class="container">
     <app-collection></app-collection>
 </main>
 
 <footer class="footer">
-    <div class="container fixed-bottom">
+    <!--fixed-bottom-->
+    <div class="container">
         <hr>
         <p>&copy; Company 2020</p>
     </div>
