--- a/src/app/jumbotron/jumbotron.component.html
+++ b/src/app/jumbotron/jumbotron.component.html
@@ -1,4 +1,4 @@
-<div class="sticky-top">
+<div class="container">
       <div class="jumbotron text-center">
             <h1 class="display-4">{{title}}</h1>
       </div>
