--- a/src/app/app-collection/app-collection.component.html
+++ b/src/app/app-collection/app-collection.component.html
@@ -7,7 +7,7 @@
             <div class="card-body">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img class="card-img-left" src="assets/icon1.png" alt="Card image">
+                        <img class="card-img-left" src="{{item.icon}}" alt="Card image">
                     </div>
                     <div class="col-md-8">
                         <p class="card-text">{{item.description}}</p>
