--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
+
 <header class="header">
     <app-jumbotron title={{title}}></app-jumbotron>
 </header>
 
-<!--anyClass-->
+
 <main role="main" class="container">
     <app-collection></app-collection>
 </main>
 
+
 <footer class="footer">
-    <!--fixed-bottom-->
     <div class="container">
-        <hr>
-        <p>&copy; Company 2020</p>
+      <span class="text-muted">&copy; Company 2020</span>
     </div>
 </footer>
