--- a/src/app/jumbotron/jumbotron.component.html
+++ b/src/app/jumbotron/jumbotron.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-      <div class="jumbotron text-center">
-            <h1 class="display-4">{{title}}</h1>
+      <div class="jumbotron text-center container">
+            <h3 class="display-4">{{title}}</h3>
       </div>
 </div>
