--- a/src/app/app-collection/app-collection.component.html
+++ b/src/app/app-collection/app-collection.component.html
@@ -1,25 +1,25 @@
 <div class="container">
-    <div class="card-deck mt-4" *ngFor="let itemRow of getItems(); index as i">
-        <div class="card " style="min-width: 18rem;" *ngFor="let item of itemRow">
-            <div class="card-header">
-                <h4 class="card-title text-center">{{item.name}}</h4>
-            </div>
-            <div class="card-body">
-                <div class="row no-gutters">
-                    <div class="col-md-4">
-                        <img class="card-img-left" src="{{item.icon}}" alt="Card image">
-                    </div>
-                    <div class="col-md-8">
-                        <p class="card-text">{{item.description}}</p>
+    <div class="row mt-4" *ngFor="let itemRow of getItems(); index as i">
+        <div class="col-md d-flex col-sm" style="min-width: 18rem;" *ngFor="let item of itemRow">
+            <div class="card flex-fill">
+                <div class= "card-body">
+                    <h2 class="text-center">{{item.name}}</h2>
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img class="card-img-left" src="{{item.icon}}" alt="Card image">
+                        </div>
+                        <div class="col-md-8">
+                            <p class="card-text">{{item.description}}</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="card-footer">
-                <div class="btn-toolbar">
-                    <a class="btn btn-primary mr-1" d href="#">Start &raquo;</a>
-                    <a class="btn btn-secondary mr-1" d href="#">Start previous &raquo;</a>
-                    <a class="btn btn-info" (click)="open(item)">More info &raquo;</a>
-                </div>
+                <div class="card-footer">    
+                    <div class="btn-toolbar">
+                        <a class="btn btn-primary mr-1" d href="#">Start &raquo;</a>
+                        <a class="btn btn-secondary mr-1" d href="#">Start previous &raquo;</a>
+                        <a class="btn btn-info" (click)="open(item)">More info &raquo;</a>
+                    </div>
+                </div>    
             </div>
         </div>
     </div>
